# fn-task

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: taskConfig.cmake.in
include/task/: function_traits.hpp  named_task.hpp  payload.hpp  task.hpp
tests/: CMakeLists.txt  aggregator.cpp  sample.cpp  sample_named_task.cpp  task_nanobench.cpp
